# ecommerce-retention-growth

./: .gitignore  404.html  Makefile  README.md  debug_crash.py  index.html  mkdocs.yml  pyproject.toml  requirements.txt  session-ses_378d.md
.github/workflows/: pages.yml  validation.yml
business_impact/: index.html
data_engineering/: index.html
docs/: business_impact.md  data_engineering.md  index.md  modeling.md
modeling/: index.html
notebooks/: 02_business_impact_scenarios.ipynb  02_business_impact_scenarios.py
search/: search_index.json
site/: 404.html
site/data_engineering/: index.html
src/: __init__.py  data_loader.py  download_real_data.py  eda.py  extract_kaggle_data.py  features.py  generate_mock_data.py  models.py  sample_kaggle_data.py  segmentation.py  train_predict.py
src/subscription_growth.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py  test_data_loader.py  test_features.py  test_model_performance.py
