[project]
name = "subscription_growth"
version = "0.1.0"
description = "Customer Value Forecasting and Segmentation for Subscription Growth"
readme = "README.md"
authors = [{ name = "AI Data Scientist", email = "ai@example.com" }]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "D",   # pydocstyle
]
ignore = ["E501", "D100", "D103", "D104", "D203", "D205", "D212", "D401", "N803", "N806"] # Relax strict limits for mock code

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-v --strict-markers"
testpaths = ["tests"]
