[project]
name = "ecommerce-retention-growth"
version = "0.1.0"
description = "Subscription Churn Prediction & Retention ROI"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy==2.3.*",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "shap>=0.42.0",
    "py7zr>=0.20.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
    "jupyter>=1.0.0",
    "tqdm>=4.65.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
